Correcciones en los DTOs de Members